--- a/sigefs/src/main/resources/application.properties
+++ b/sigefs/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-#spring boot properties
-#Sun Jul 09 13:26:43 EDT 2017
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.mvc.view.prefix: /WEB-INF/view/
+spring.mvc.view.suffix: .jsp
+server.port = 8080
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url= jdbc:postgresql://localhost/sigefs
 spring.datasource.username=postgres
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
 spring.datasource.password=1234
-spring.datasource.url=jdbc\:postgresql\://localhost/sigefs
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
